--- a/news21national/templates/n21alpha/multimedia/base.html
+++ b/news21national/templates/n21alpha/multimedia/base.html
@@ -18,13 +18,13 @@
 	{% if messages %}
 	<div class="grid_16">
 	    {% for message in messages %}
-			<div class="ui-widget">
+			<div class="uniForm">
 				{% if message|slice:"0:1" == "1" %}
-				<div class="ui-state-highlight ui-corner-all" style="padding:2px 5px 2px 5px; margin:10px 0px 10px 0px;">
+				<div id="OKMsg" style="padding:2px 5px 2px 5px; margin:10px 0px 10px 0px;">
 					<span class="ui-icon ui-icon-info" style="float: left; margin-right:5px;"></span> <strong>Success</strong> : {{ message|slice:"2:" }}
 				</div>
 				{% else %}
-				<div class="ui-state-error ui-corner-all" style="padding:2px 5px 2px 5px; margin:10px 0px 10px 0px;">
+				<div id="errorMsg" style="padding:2px 5px 2px 5px; margin:10px 0px 10px 0px;">
 					<span class="ui-icon ui-icon-alert" style="float: left; margin-right:5px;"></span> <strong>Alert</strong> : {{ message|slice:"2:" }}
 				</div>
 				{% endif %}
